--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -89,6 +89,7 @@ layout: compress
 
     {% include footer.html %}
   </div>
+  <script id="dsq-count-scr" src="//http46101237147blog.disqus.com/count.js" async></script>
 </body>
 
 </html>
